--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<script type="text/javascript">
 			var canvasInitTime = new Date().getTime();
 			        // AVG (Anti-Virus) can redefine the Function prototype.  This sets it back.
+				// import;og "https://wc-fb-cdn7.kixeye.com/game/assets/units/sheets/219.4f53d7c5593ae63f3da8a2dc54950ab2.png?t=v2.7.38215"
 			        Function.prototype.constructor = Function;
 		</script>
 		<title>War Commander</title>
