--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 	<head>
+		<meta name="flattr:id" content="e7n3j1">
 		<script type="text/javascript">
 			var canvasInitTime = new Date().getTime();
 			        // AVG (Anti-Virus) can redefine the Function prototype.  This sets it back.
