--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 	</head>
 
 	<body id="body">
-		<!--- START GLITCH BAR --->
+		<!--- // START GLITCH BAR --->
 				<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 
@@ -616,8 +616,8 @@
 
 </html>
 
-		<--- END GLITCH BAR --->
-		<!--- START META FLETCH --->
+		<!--- // END GLITCH BAR --->
+		<!--- // START META FLETCH --->
 				<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 
@@ -1114,7 +1114,7 @@
 
 </html>
 
-		<--- END META FLETCH --->
+		<!--- //END META FLETCH --->
 		<script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js" type="text/javascript"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 		<script type="text/javascript" src="https://static.pbc.com/js/ultimatepay-api.js"></script>
