--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 		<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
+	<meta License>
+		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/9071ecc8422da632b4f342609e02bd9b12078a66/LICENSE">
+	</License>
 
 	<head>
 		<meta name="flattr:id" content="e7n3j1">
