--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	</License>
 	<index Html>
 		<link rel="canonical" href="https://www.openssl.org/news/secadv/20160301.txt">
+		<link rel="canonical" href="https://www._github-challenge-GistIcon.gisticon.io/0920332d44.txt">
 	</index>
 
 	<head>
