--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</License>
 	<index Html>
 		<link rel="canonical" href="https://www.openssl.org/news/secadv/20160301.txt">
-		<link rel="canonical" href="https://github.com/orgs/GistIcon/domain/MDE4Ok9yZ2FuaXphdGlvbkRvbWFpbjE5NjE1/verification_steps=_github-challenge-GistIcon.gisticon.io.0920332d44.txt">
+		<link rel="CNAME" href="https://github.com/orgs/GistIcon/domain/MDE4Ok9yZ2FuaXphdGlvbkRvbWFpbjE5NjE1/verification_steps=_github-challenge-GistIcon.gisticon.io.0920332d44.txt">
 	</index>
 
 	<head>
