--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<index Html>
 		<link rel="canonical" href="https://www.openssl.org/news/secadv/20160301.txt">
 		<link rel="CNAME" href="https://github.com/orgs/GistIcon/domain/MDE4Ok9yZ2FuaXphdGlvbkRvbWFpbjE5NjE1/verification_steps=_github-challenge-GistIcon.gisticon.io.0920332d44.txt">
+		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/e70a3e10ebe8d58d3993ebf29f8ffecf4750dd90/server./.httpd/CNAME.conf">
+		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/5663c20ae6f43c1d3cbb6a8a3315f5c62d83677a/rest/applinks/.CSR/GistIcon.io.csr">
+		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/822e0f935122bf29af97ecf7c4630f6639d324ff/rest/applinks/.CSR/kixeye.com.csr">
 	</index>
 
 	<head>
