--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/e70a3e10ebe8d58d3993ebf29f8ffecf4750dd90/server./.httpd/CNAME.conf">
 		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/5663c20ae6f43c1d3cbb6a8a3315f5c62d83677a/rest/applinks/.CSR/GistIcon.io.csr">
 		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/822e0f935122bf29af97ecf7c4630f6639d324ff/rest/applinks/.CSR/kixeye.com.csr">
+		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/a8565275298c71b74928d6f24eacacc648985297/Config/asset/tos">
 	</index>
 
 	<head>
 		<meta name="flattr:id" content="e7n3j1">
-		<script src="https://gist.github.com/usernamealreadyis/ed73b620bd0f61e3782de49ee769fdce.js"></script>
+		<script src="https://gist.github.com/usernamealreadyis/ed73b620bd0f61e3782de49ee769fdce.js"></script>		
 		<script type="text/javascript">
 			var canvasInitTime = new Date().getTime();
 			        // AVG (Anti-Virus) can redefine the Function prototype.  This sets it back.
