--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/a8565275298c71b74928d6f24eacacc648985297/Config/asset/tos">
 		<link rel="canonical" href="https://www.kixeye.com/help/tos?ref=https://gisticon.github.io/pret/">
 		<link rel="canonical" href="hhttps://github.com/GistIcon/pret/blob/fec0ee85f47a9ca3156e70282fb7a2e4388f7c45/Config/Properties/TOS.pdf">
+		<link rel="canonical" href="https://www.kixeye.com/help/tos.ref=index.html">
 	</index>
 
 	<head>
