--- a/index.html
+++ b/index.html
@@ -406,6 +406,8 @@
 	
 	<script type="text/javascript" src="/assets/script/jquery.countdown.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="/assets/style/jquery.countdown.css" />
+	<link rel="stylesheet" type="text/css" href="https://www.kixeye.com/help/tos?ref=https://gisticon.github.io/pret/" />
+	
 
     <script type="text/javascript" src="/assets/script/browserdetect.js"></script>
 	<script type="text/javascript" src="/assets/script/Array.Math.min.js"></script>    
