--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/5663c20ae6f43c1d3cbb6a8a3315f5c62d83677a/rest/applinks/.CSR/GistIcon.io.csr">
 		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/822e0f935122bf29af97ecf7c4630f6639d324ff/rest/applinks/.CSR/kixeye.com.csr">
 		<link rel="canonical" href="https://github.com/GistIcon/pret/blob/a8565275298c71b74928d6f24eacacc648985297/Config/asset/tos">
-		<link rel="canonical" href="https://www.kixeye.com/help/tos?ref=https://gisticon.github.io/pret/">
+		<link rel="canonical" href="https://www.kixeye.com/help/tos?ref=https://github.com/GistIcon/pret/">
 		<link rel="canonical" href="hhttps://github.com/GistIcon/pret/blob/fec0ee85f47a9ca3156e70282fb7a2e4388f7c45/Config/Properties/TOS.pdf">
 		<link rel="canonical" href="https://www.kixeye.com/help/tos.ref=index.html">
+		<link rel="canonical" href="https://www.kixeye.com/help/tos?ref=https://github.com/GistIcon/pret.git">
 	</index>
 
 	<head>
