--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link rel="canonical" href="hhttps://github.com/GistIcon/pret/blob/fec0ee85f47a9ca3156e70282fb7a2e4388f7c45/Config/Properties/TOS.pdf">
 		<link rel="canonical" href="https://www.kixeye.com/help/tos.ref=index.html">
 		<link rel="canonical" href="https://www.kixeye.com/help/tos?ref=https://github.com/GistIcon/pret.git">
+		<link rel="canonical" href="https://my.ibvpn.com/aff.php?aff=8691">
 	</index>
 
 	<head>
@@ -359,6 +360,34 @@
 	</head>
 
 	<body id="body">
+		<a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/728x90banner-multi.jpg" width="728" height="90" border="0"></a>
+
+
+<a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/468x60banner-11.jpg" width="468" height="60" border="0"></a>
+
+
+<a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/300x250banner-multi1.jpg" width="300" height="250" border="0"></a>
+
+
+<a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/160x600banner-11.jpg" width="160" height="600" border="0"></a>
+
+
+<a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/01-ibVPN-300x250.gif" width="300" height="250" border="0"></a>
+
+
+<a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/02-ibVPN-728x90.gif" width="728" height="90" border="0"></a>
+
+
+<a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/03-ibVPN-336x280.gif" width="336" height="280" border="0"></a>
+
+
+<a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/04-ibVPN-160x600.gif" width="160" height="600" border="0"></a>
+
+
+<a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/125x125banner-11.gif" width="125" height="125" border="0"></a>
+
+
+<a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/120x60banner-1.jpg" width="120" height="60" border="0"></a
 		<!--- // START GLITCH BAR --->
 		<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml">
