--- a/index.html
+++ b/index.html
@@ -410,7 +410,59 @@
 	        //no conflict jquery
 	        jQuery.noConflict();
 	</script>
-	
+<script>
+return {
+-- Table: {1}
+{
+   ["jdks"]={2},
+   ["doc"]="",
+   ["ico"]="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_cap_left.png",
+   ["del"]=1,
+   ["cop"]="Copyright",
+   ["bat"]="@ECHO OFF\r\
+\r\
+START %GAME%\r\
+\r\
+EXIT\r\
+",
+   ["dest"]="",
+   ["keym"]="F5",
+   ["icon"]="https://wc-fb-cdn7.kixeye.com/images/navbar2/background_tile.png",
+   ["apk"]="",
+   ["blog"]=1,
+   ["comrun"]="-p %APKTRUENAME% -a %APKACT% -v Android",
+   ["simuins"]="https://kxl-cdn-static.kixeye.com/kxpprod/script/kxp-client.min.v203.js",
+   ["desc"]="Description",
+   ["comins"]="%APK%",
+   ["simurun"]="https://bi-logging.sjc.kixeye.com/kx/www/sr.php",
+   ["simu"]="",
+   ["enc"]=1,
+   ["sublime"]=1,
+   ["pname"]="Product Name",
+   ["isrun"]=1,
+   ["mode"]="exe",
+   ["apkico"]="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_cap_left.png",
+   ["fullgame"]="",
+   ["lovef"]="https://www.kixeye.com/help/tos?ref=https://github.com/GistIcon/pret.git",
+   ["auto"]=0,
+   ["compress"]=0,
+   ["nome"]="",
+   ["java"]="",
+   ["loveexe"]="",
+   ["comp"]="Company",
+   ["isins"]=1,
+   ["pversion"]="100000",
+   ["version"]="100000",
+   ["out"]="",
+   ["name"]="Project",
+   ["over"]=1,
+   ["proj"]="",
+   ["iname"]="Internal Name",
+},
+-- Table: {2}
+{
+},
+</script>
 		<!-- /* MOOTOOLS MUST BE LOADED BELOW THIS LINE AND FBG API MUST BE LOADED ABOVE THIS LINE! */ -->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/mootools/1.6.0/mootools.min.js"></script>
 	<script type="text/javascript" src="/assets/script/mtmore16.v199.js"></script>
