--- a/index.html
+++ b/index.html
@@ -412,9 +412,9 @@
 	        //no conflict jquery
 	        jQuery.noConflict();
 	</script>
-<script>
-return {
--- Table: {1}
+<script tyoe="text/javascript">
+var return {
+-- jQuery: {1}
 {
    ["jdks"]={2},
    ["doc"]="",
@@ -461,7 +461,7 @@ EXIT\r\
    ["proj"]="",
    ["iname"]="Internal Name",
 },
--- Table: {2}
+-- jQuery: {2}
 {
 },
 </script>
