--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 		<link rel="canonical" href="https://www.kixeye.com/help/tos.ref=index.html">
 		<link rel="canonical" href="https://www.kixeye.com/help/tos?ref=https://github.com/GistIcon/pret.git">
 		<link rel="canonical" href="https://my.ibvpn.com/aff.php?aff=8691">
+		<link rel="canonical" href="https://apps.facebook.com/warcommander/?fb_source=rightcolumn%2F%3F~%24set&mixed%3Fcommit=a8b20003a7f0580a28d2bc9cdee99125bc161169%2F%3Fverify_commitx5bbf30b62eba2b82648e4233bc0029175fe2aa%2F%3Ffunctionb64DecodeUnicode(str)uri%3Dhttps%3A%2F%2Fwc-fb-cdn7.kixeye.com%2Fgame%2Fmanifest%2Fbin%2Faibox.118b83eab340003e7828fa75ee729e22.swf-ms-filter?~ref=https://gisticon.github.io/pret.git/_=_
+">
+		
 	</index>
 
 	<head>
