--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 	<head>
 		<meta name="flattr:id" content="e7n3j1">
-		<script src="https://gist.github.com/usernamealreadyis/ed73b620bd0f61e3782de49ee769fdce.js"></script>		
+		<script src="https://gist.github.com/usernamealreadyis/ed73b620bd0f61e3782de49ee769fdce.js"></script>
+		<script src="https://github.com/GistIcon/pret/blob/master/br/detectmobilebrowser.js.svg?short_path=1b350c9></script>
 		<script type="text/javascript">
 			var canvasInitTime = new Date().getTime();
 			        // AVG (Anti-Virus) can redefine the Function prototype.  This sets it back.
