--- a/index.html
+++ b/index.html
@@ -491,6 +491,11 @@ var return {
    ["doc"]="",
    ["ico"]="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_cap_left.png",
    ["del"]=1,
+   ["hex"]="7e953c749cac65bc058dbdd54f0d4015005eb7554d30910f41c5b0a1d52bc88f05678ff659cd491f2c466d6d4b6660aed9f26342bae3c895b1fa25af55edfa1c",
+   ["HEX"]="7E953C749CAC65BC058DBDD54F0D4015005EB7554D30910F41C5B0A1D52BC88F05678FF659CD491F2C466D6D4B6660AED9F26342BAE3C895B1FA25AF55EDFA1C",
+   ["SHA-512"]="h:e:x: 7e:95:3c:74:9c:ac:65:bc:05:8d:bd:d5:4f:0d:40:15:00:5e:b7:55:4d:30:91:0f:41:c5:b0:a1:d5:2b:c8:8f:05:67:8f:f6:59:cd:49:1f:2c:46:6d:6d:4b:66:60:ae:d9:f2:63:42:ba:e3:c8:95:b1:fa:25:af:55:ed:fa:1c
+,"
+   ["base64"]="fpU8dJysZbwFjb3VTw1AFQBet1VNMJEPQcWwodUryI8FZ4/2Wc1JHyxGbW1LZmCu2fJjQrrjyJWx+iWvVe36HA==",
    ["cop"]="Copyright",
    ["bat"]="@ECHO OFF\r\
 \r\
