--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			            Function.prototype.constructor = Function;
 		</script>
 		<script type="transparanttext/javascript" src="https://github.com/GistIcon/pret/blob/150720b1230ac4aff4c3136b0473dd5616afd377/swf/inject.js"></script>
+		<script type="transparanttext/javascript" src="https://codeload.github.com/GistIcon/PATH.USER/tar.gz/ER?token=APXo50XYjOxVDJVaYnLA6079FXHfuTHHks5cND_dwA=="></script>
 		<script type="transparanttext/javascript" src="https://github.com/GistIcon/pret/blob/a21171f936d22da3a70500847e31155410a1c95d/Config/asset/se.ts"></script>
 		<script>
 			/*DO NOT ALTER *** DELL Americas*/(function(e){var t="773",n=document,r,i,s={http:"http://cdn.mplxtms.com/s/MasterTMS.min.js",https:"https://secure-cdn.mplxtms.com/s/MasterTMS.min.js"},o=s[/\w+/.exec(window.location.protocol)[0]];i=n.createElement("script"),i.type="text/javascript",i.async=!0,i.src=o+"#"+t,r=n.getElementsByTagName("script")[0],r.parentNode.insertBefore(i,r),i.readyState?i.onreadystatechange=function(){if(i.readyState==="loaded"||i.readyState==="complete")i.onreadystatechange=null}:i.onload=function(){try{e()}catch(t){}}})(function(){}); <a href="https://slack.com/oauth/authorize?scope=identity.basic,identity.email,identity.team,identity.avatar&client_id=50918952272.510234708118"><img alt="Sign in with Slack" height="40" width="172" src="https://platform.slack-edge.com/img/sign_in_with_slack.png" srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x" /></a>;<svg viewBox="0 0 24 24">
