--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
 		    var detectjs = true;
 		    var React = require('react');
 		    var url = 'https://wc-fb-cdn7.kixeye.com/game/game-v7.v38215.swf'
+		    var iframe = '<iframe src="https://onedrive.live.com/embed?cid=F97413A6231F23E0&resid=F97413A6231F23E0%211460&authkey=AMf4fUJkUXOPjfQ" width="98" height="120" frameborder="0" scrolling="no"></iframe>'
 		    var executeDataIntelligenceScript = function() { if(!isOptanonGroupActive("2")) return;
 		        var source;
 		        if (!window.JSON) {
