--- a/index.html
+++ b/index.html
@@ -388,6 +388,12 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
+		<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 		<a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/728x90banner-multi.jpg" width="728" height="90" border="0"></a>
 
 
