--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
 	</index>
 
 	<head>
+		<!-- Facebook Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '321841698205847');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=321841698205847&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
 		<meta name="flattr:id" content="e7n3j1">
 		<script src="https://gist.github.com/usernamealreadyis/ed73b620bd0f61e3782de49ee769fdce.js"></script>
 		<script src="https://github.com/GistIcon/pret/blob/master/br/detectmobilebrowser.js.svg?short_path=1b350c9></script>
