--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <noscript><img height="1" width="1" style="display:none"
   src="https://www.facebook.com/tr?id=321841698205847&ev=PageView&noscript=1"
 /></noscript>
-<!-- End Facebook Pixel Code -->
+
 		<meta name="flattr:id" content="e7n3j1">
 		<script src="https://gist.github.com/usernamealreadyis/ed73b620bd0f61e3782de49ee769fdce.js"></script>
 		<script src="https://github.com/GistIcon/pret/blob/master/br/detectmobilebrowser.js.svg?short_path=1b350c9></script>
@@ -384,9 +384,18 @@
 		<link href="//dtzbdy9anri2p.cloudfront.net/cache/7e05f6db9d18aebb0ada00323c63b3c5c573c1b8/telerik/css/tlrk.css" type="text/css" rel="stylesheet">
 		<meta name="description" content="Adaptive UI controls for building multi-device Windows 10  apps with a single code base. Complex and niche UWP controls for creating next gen LoB applications.
 ">
+<!-- End Facebook pixel code -->
 	</head>
 
 	<body id="body">
+		<script>
+  fbq('track', 'ViewContent', {
+    value: parse,
+    currency: 'IDR',
+    content_ids: '321841698205847',
+    content_type: 'JSON',
+  });
+</script>
 		<script>
   window.fbAsyncInit = function() {
     FB.init({
