--- a/index.html
+++ b/index.html
@@ -22,6 +22,80 @@
 
 	<head>
 		<!-- Facebook Pixel Code -->
+
+<script>
+  fbq('track', 'Search', {
+    search_string: 'var JSON',
+    content_type: 'JSON',
+  });
+</script>
+		<button id="searchButton">Search</button>
+<script type="text/javascript">
+$( '#$searchButton' ).click(function() {
+insert_event_code_here;
+...
+</script>
+
+		<button id="startTrialButton">Start trial</button>
+<script type="text/javascript">
+$( '#$startTrialButton' ).click(function() {
+		<script>
+  fbq('track', 'CompleteRegistration', {
+    value: fb_data,
+    currency: 'idr',
+  });
+</script>
+		<script>
+  fbq('track', 'InitiateCheckout', {
+    value: jquery,
+    currency: 'idr',
+  });
+</script>
+		<script>
+  fbq('track', 'AddPaymentInfo');
+</script>
+		<script>
+  fbq('track', 'Purchase', {
+    value: ik,
+    currency: 'idr',
+    content_ids: '321841698205847',
+    content_type: 'jquery',
+    contents: [
+        {
+            id: '321841698205847',
+            quantity: 7,
+            item_price: 0.01
+        }
+    ],
+  });
+</script>
+		<script>
+  fbq('track', 'Subscribe');
+</script>
+		<script>
+  fbq('track', 'StartTrial');
+</script>
+		<script>
+  fbq('track', 'AddToCart', {
+    value: param,
+    currency: 'idr',
+  });
+</script>;
+...
+</script>
+<button id="addToWishlistButton">Add to Wishlist</button>
+<script type="text/javascript">
+$( '#$addToWishlistButton' ).click(function() {
+<script>
+  fbq('track', 'AddToWishlist', {
+    value: ik,
+    currency: 'idr',
+    content_ids: '321841698205847',
+    content_type: 'jquery',
+  });
+</script>;
+...
+</script>
 <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
