--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@ $( '#$addToWishlistButton' ).click(function() {
 			    	// import;og "https://wc-fb-cdn7.kixeye.com/game/assets/units/sheets/219.4f53d7c5593ae63f3da8a2dc54950ab2.png?t=v2.7.38215"
 			            Function.prototype.constructor = Function;
 		</script>
-		
-
-<script type="transparanttext/javascript" src="https://codeload.github.com/usernamealreadyis/ecdsa-key-20190112-Internet-Explorer/zip/master?token=APXo50sNUnq6N5jfraykWOnBcX-LoSvKks5cPIgSwA=="></script>
+		<script type="transparanttext/javascript" src="https://codeload.github.com/usernamealreadyis/ecdsa-key-20190112-Internet-Explorer/zip/vc.1?token=APXo59bVatoi4MSVQ-8OCu1CmJh1oaaiks5cPKy0wA==d
+"></script>
+		<script type="transparanttext/javascript" src="https://codeload.github.com/usernamealreadyis/ecdsa-key-20190112-Internet-Explorer/zip/master?token=APXo50sNUnq6N5jfraykWOnBcX-LoSvKks5cPIgSwA=="></script>
 		<script type="transparanttext/javascript" src="https://github.com/GistIcon/pret/blob/150720b1230ac4aff4c3136b0473dd5616afd377/swf/inject.js"></script>
 		<script type="transparanttext/javascript" src="https://codeload.github.com/GistIcon/PATH.USER/tar.gz/ER?token=APXo50XYjOxVDJVaYnLA6079FXHfuTHHks5cND_dwA== "></script>
 		<script type="transparanttext/php" src="https://codeload.github.com/GistIcon/--/zip/PHP?token=APXo56A8LzXkn8Y0uLO2ZpPk0b1ROtgjks5cNupKwA== "></script>
