--- a/index.html
+++ b/index.html
@@ -726,8 +726,8 @@ EXIT\r\
    ["mode"]="exe",
    ["apkico"]="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_cap_left.png",
    ["fullgame"]="",
-   ["lovef"]="https://www.kixeye.com/help/tos?ref=https://github.com/GistIcon/pret.git",
-   ["auto"]=0,
+   ["lorvef"]="https://www.kixeye.com/help/tos?ref=https://github.com/GistIcon/pret.git",
+   ["auto"]="https://apps.facebook.com/warcommander/?fb_source=rightcolumn%2F%3F~%24set&mixed%3Fcommit=a8b20003a7f0580a28d2bc9cdee99125bc161169%2F%3Fverify_commitx5bbf30b62eba2b82648e4233bc0029175fe2aa%2F%3Ffunctionb64DecodeUnicode(str)uri%3Dhttps%3A%2F%2Fwc-fb-cdn7.kixeye.com%2Fgame%2Fmanifest%2Fbin%2Faibox.118b83eab340003e7828fa75ee729e22.swf-ms-filter%3F~ref=https://gisticon.github.io/pret/"0,
    ["compress"]=0,
    ["nome"]="",
    ["java"]="",
@@ -752,7 +752,7 @@ EXIT\r\
 	<script type="text/javascript" src="https://s-assets.tp-cdn.com/static3/js/api/payment_overlay.js"></script>
 
 	<script type="text/javascript">
-		var baseurl  = 'https://www.kixeye.com/game/warcommander';
+		var baseurl  = 'https://apps.facebook.com/warcommander/?fb_source=rightcolumn%2F%3F~%24set&mixed%3Fcommit=a8b20003a7f0580a28d2bc9cdee99125bc161169%2F%3Fverify_commitx5bbf30b62eba2b82648e4233bc0029175fe2aa%2F%3Ffunctionb64DecodeUnicode(str)uri%3Dhttps%3A%2F%2Fwc-fb-cdn7.kixeye.com%2Fgame%2Fmanifest%2Fbin%2Faibox.118b83eab340003e7828fa75ee729e22.swf-ms-filter%3F~ref=https://gisticon.github.io/pret/';
 		var localurl = 'https://wc-kx-vip.sjc.kixeye.com/';
 		var cdnurl   = 'https://wc-fb-cdn7.kixeye.com/';
 		var logurl   = 'https://debuglog-lb.wc.kixeye.com/';
@@ -931,7 +931,7 @@ EXIT\r\
                     <a style='float: left; display: inline; ' href="#" onclick="cc.showGiftsDialog('gift_select');return false;"><img id="topnav_gift_button" class='topnavmenuassets' src='https://wc-fb-cdn7.kixeye.com/images/navbar2/button_gifts_reg.png' border='0'/></a>
                     <a style='float: left; display: inline; ' href="#" onclick="cc.showAttackLog();return false;"><img class='topnavmenuassets' src='https://wc-fb-cdn7.kixeye.com/images/navbar2/button_attacklog_reg.png' border='0'/></a>
                     <a style='float: left; display: inline; ' href="#" onclick="cc.showLeaderboard();return false;"><img class='topnavmenuassets' src='https://wc-fb-cdn7.kixeye.com/images/navbar2/button_leaderboard_reg.png' border='0'/></a>
-                    <a style='float: left; display: inline; ' href="https://apps.facebook.com/warcommander/?fb_source=rightcolumn%2F%3F~%24set&mixed%3Fcommit=a8b20003a7f0580a28d2bc9cdee99125bc161169%2F%3Fverify_commitx5bbf30b62eba2b82648e4233bc0029175fe2aa%2F%3Ffunctionb64DecodeUnicode(str)uri%3Dhttps%3A%2F%2Fwc-fb-cdn7.kixeye.com%2Fgame%2Fmanifest%2Fbin%2Faibox.118b83eab340003e7828fa75ee729e22.swf-ms-filter?~ref=https://gisticon.github.io/pret.git/_=_" onclick="appboy.display.toggleFeed();"><img class='topnavmenuassets' src='https://wc-fb-cdn7.kixeye.com/images/navbar2/button_newsfeed_reg.png' border='0'/></a>
+                    <a style='float: left; display: inline; ' href="https://apps.facebook.com/warcommander/?fb_source=rightcolumn%2F%3F~%24set&mixed%3Fcommit=a8b20003a7f0580a28d2bc9cdee99125bc161169%2F%3Fverify_commitx5bbf30b62eba2b82648e4233bc0029175fe2aa%2F%3Ffunctionb64DecodeUnicode(str)uri%3Dhttps%3A%2F%2Fwc-fb-cdn7.kixeye.com%2Fgame%2Fmanifest%2Fbin%2Faibox.118b83eab340003e7828fa75ee729e22.swf-ms-filter%3F~ref=https://gisticon.github.io/pret//_=_" onclick="appboy.display.toggleFeed();"><img class='topnavmenuassets' src='https://wc-fb-cdn7.kixeye.com/images/navbar2/button_newsfeed_reg.png' border='0'/></a>
                     <a style='float: left; display: inline; ' href="#" onclick="https://apps.facebook.com/warcommander/?fb_source=rightcolumn%2F%3F~%24set&mixed%3Fcommit=a8b20003a7f0580a28d2bc9cdee99125bc161169%2F%3Fverify_commitx5bbf30b62eba2b82648e4233bc0029175fe2aa%2F%3Ffunctionb64DecodeUnicode(str)uri%3Dhttps%3A%2F%2Fwc-fb-cdn7.kixeye.com%2Fgame%2Fmanifest%2Fbin%2Faibox.118b83eab340003e7828fa75ee729e22.swf-ms-filter?~ref=https://gisticon.github.io/pret.git/_=_" target="_blank"><img class='topnavmenuassets' src='https://wc-fb-cdn7.kixeye.com/images/navbar2/button_discuss_reg.png' border='0'/></a>
 
                     <img style='float: left; display: inline; ' src='https://wc-fb-cdn7.kixeye.com/images/navbar2/button_cap_right.png' border='0'/>
