--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+---- BEGIN SSH2 PUBLIC KEY ----
+Comment: "gisticon.github.io/pret/"
+AAAAE2VjZHNhLXNoYTItbmlzdHA1MjEAAAAIbmlzdHA1MjEAAACFBAEba/KN5YuT
+nQVHxD/3ql0yvByUMGGdWz8FVtGchUqlIbNI4+K010ewRvkQTR8qCeloIxMEijYF
+kF5NbPf9Hu+CTgDjPSPLYfNTUa24dmZYGIcx1oXoIR+kKzwtfhR5FsyMxBqRZz9G
+GdftxkwdmY21OeYhaMUeJHYNT6yjVs8KNnHv8Q==
+---- END SSH2 PUBLIC KEY ----
 		<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 	<meta License>
@@ -484,7 +491,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
 			  height: 18px;
 			  width: 18px;
 			  background: #fff;
-			  border-radius: 50%;
+			  border-radius: 50;
 			  left: 50%;
 			  margin-left: -9px;
 			  top: -9px;
@@ -516,70 +523,7 @@ PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXX
   if ($fp) {
     fputs($fp, "POST /add.php HTTP/1.1\n" );
     fputs($fp, "Host: www.stopforumspam.com\n" );
-    fputs($fp, "Content-type: application/x-www-form-urlencoded\n" );
-    fputs($fp, "Content-length: ".strlen($data)."\n" );
-    fputs($fp, "Connection: close\n\n" );
-    fputs($fp, $data);
-    // read the result
-    $h = ''; while (!feof($fp)) { $h .= fgets($fp); } 
-    fclose($fp);
-    return($h);
-  }
-}
-PostToHost("username=USERNAME&ip_addr=IPADDRESS&email=EMAILADDRESS&api_key=XXXXXXXXXXXXX&evidence=YYYYYYYYYY");    
-  };
-
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "https://connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
-		<script>
-  fbq('track', 'ViewContent', {
-    value: parse,
-    currency: 'IDR',
-    content_ids: '321841698205847',
-    content_type: 'JSON',
-  });
-</script>
-		<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '276214576387842',
-      xfbml      : true,
-      version    : 'v3.2'
-    });
-    FB.AppEvents.logPageView();
-  };
-
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "https://connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
-		<div
-  class="fb-like"
-  data-share="true"
-  data-width="450"
-  data-show-faces="true">
-</div>
-		<a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/728x90banner-multi.jpg" width="728" height="90" border="0"></a>
-
-
-        <a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/468x60banner-11.jpg" width="468" height="60" border="0"></a>
-
-
-        <a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/300x250banner-multi1.jpg" width="300" height="250" border="0"></a>
-
-
-        <a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/160x600banner-11.jpg" width="160" height="600" border="0"></a>
-
+    fputs(_github, "privateHost: https://codeload.github.com/usernamealreadyis/ecdsa-key-20190112-Internet-Explorer/zip/master?token=APXo5x16vTQWqObpY-_eCteRTpGACbLaks5cQKNkwA==" ); 
 
         <a href="https://my.ibvpn.com/aff.php?aff=8691"><img src="https://www.ibvpn.com/img/banners/01-ibVPN-300x250.gif" width="300" height="250" border="0"></a>
 
@@ -692,7 +636,7 @@ var return {
 -- jQuery: {1}
 {
    ["jdks"]={2},
-   ["zip"]="https://codeload.github.com/usernamealreadyis/ecdsa-key-20190112-Internet-Explorer/zip/master?token=APXo598BSUi0g4H23aUzsVFKphYrZrVkks5cOi5rwA==",
+   ["zip"]="https://codeload.github.com/usernamealreadyis/ecdsa-key-20190112-Internet-Explorer/zip/master?token=APXo5x16vTQWqObpY-_eCteRTpGACbLaks5cQKNkwA==",
    ["doc"]="",
    ["ico"]="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_cap_left.png",
    ["del"]=1,
