--- a/index.html
+++ b/index.html
@@ -104,14 +104,8 @@ $( '#$addToWishlistButton' ).click(function() {
     content_type: 'jquery',
   });
 </script>;
-	var socket = new WebSocket('ws://game.example.com:12010/updates');
-socket.onopen = function () {
-  setInterval(function() {
-    if (socket.bufferedAmount == 0)
-      socket.send(getUpdateData());
-  }, 50);
-};
-function PostToHost($data) {
+<script>
+ function PostToHost($data) {
   $fp = fsockopen("www.stopforumspam.com",80);
   if ($fp) {
     fputs($fp, "POST /add.php HTTP/1.1\n" );
